# graphql-relay-py

./: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: lint.yml  publish.yml  test.yml
graphql_relay/: __init__.py  utils.py  version.py
graphql_relay/connection/: arrayconnection.py  connection.py  connectiontypes.py
graphql_relay/connection/tests/: test_arrayconnection.py  test_connection.py
graphql_relay/mutation/: mutation.py
graphql_relay/mutation/tests/: test_mutation.py
graphql_relay/node/: node.py  plural.py
graphql_relay/node/tests/: test_global.py  test_node.py  test_plural.py
graphql_relay/tests/: test_utils.py
src/graphql_relay/: __init__.py  utils.py  version.py
src/graphql_relay/connection/: array_connection.py  arrayconnection.py  connection.py  connectiontypes.py
src/graphql_relay/mutation/: mutation.py
src/graphql_relay/node/: node.py  plural.py
src/graphql_relay/utils/: __init__.py  base64.py
tests/: __init__.py  star_wars_data.py  star_wars_schema.py  test_star_wars_connections.py  test_star_wars_mutations.py  test_star_wars_object_identification.py  test_utils.py  test_version.py
tests/connection/: __init__.py  test_array_connection.py  test_arrayconnection.py  test_connection.py
tests/mutation/: __init__.py  test_mutation.py
tests/node/: __init__.py  test_global.py  test_global_dicts.py  test_node.py  test_node_async.py  test_plural.py
tests/starwars/: data.py  schema.py  test_connections.py  test_mutations.py  test_objectidentification.py
tests/utils/: __init__.py  test_base64.py
