[tool.poetry]
name = "graphql-relay"
version = "3.1.0"
description = """
Relay library for graphql-core"""
license="MIT"
authors = [
    "Syrus Akbary <me@syrusakbary.com>",
    "Christoph Zwerschke <cito@online.de>"
]
readme = "README.md"
homepage = "https://github.com/graphql-python/graphql-relay-py"
repository = "https://github.com/graphql-python/graphql-relay-py"
documentation = "https://github.com/graphql-python/graphql-relay-py"
keywords = ["graphql", "relay", "api"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]
packages = [
    { include = "graphql_relay", from = "src" },
    { include = "tests", format = "sdist" },
    { include = '.bumpversion.cfg', format = "sdist" },
    { include = '.coveragerc', format = "sdist" },
    { include = '.editorconfig', format = "sdist" },
    { include = '.flake8', format = "sdist" },
    { include = 'mypy.ini', format = "sdist" },
    { include = 'codecov.yml', format = "sdist" },
    { include = 'poetry.lock', format = "sdist" },
    { include = 'tox.ini', format = "sdist" },
    { include = 'setup.cfg', format = "sdist" },
    { include = 'CODEOWNERS', format = "sdist" },
    { include = 'MANIFEST.in', format = "sdist" }
]

[tool.poetry.dependencies]
python = "^3.6"
graphql-core = "^3.1"
typing-extensions = { version = "^3.6.2", python = "<3.8" }

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-asyncio = ">=0.14,<1"
pytest-cov = "^2.11"
pytest-describe = "^1.0"
pyyaml = "^5.4"
black = "20.8b1"
flake8 = "^3.8"
mypy = ">=0.812,<0.820"
codecov = "^2"
check-manifest = ">=0.46,<1"
bump2version = ">=1.0,<2"
tox = "^3.22"

[tool.black]
target-version = ['py36', 'py37', 'py38']

[build-system]
requires = ["poetry_core>=1,<2"]
build-backend = "poetry.core.masonry.api"
