[tool.poetry]
name = "graphql-relay"
version = "3.1.1"
description = """
Relay library for graphql-core"""
license="MIT"
authors = [
    "Syrus Akbary <me@syrusakbary.com>",
    "Christoph Zwerschke <cito@online.de>"
]
readme = "README.md"
homepage = "https://github.com/graphql-python/graphql-relay-py"
repository = "https://github.com/graphql-python/graphql-relay-py"
documentation = "https://github.com/graphql-python/graphql-relay-py"
keywords = ["graphql", "relay", "api"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
packages = [
    { include = "graphql_relay", from = "src" },
    { include = "tests", format = "sdist" },
    { include = '.bumpversion.cfg', format = "sdist" },
    { include = '.coveragerc', format = "sdist" },
    { include = '.editorconfig', format = "sdist" },
    { include = '.flake8', format = "sdist" },
    { include = '.mypy.ini', format = "sdist" },
    { include = 'poetry.lock', format = "sdist" },
    { include = 'tox.ini', format = "sdist" },
    { include = 'setup.cfg', format = "sdist" },
    { include = 'CODEOWNERS', format = "sdist" },
    { include = 'MANIFEST.in', format = "sdist" }
]

[tool.poetry.dependencies]
python = "^3.6"
graphql-core = "~3.1"
typing-extensions = { version = "^4.0", python = "<3.8" }

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-asyncio = [
    {version=">=0.17,<1", python = ">=3.7" },
    {version=">=0.16,<0.17", python = "<3.7" },
]
pytest-cov = "^3.0"
pytest-describe = "^2.0"
black = [
    {version = "21.12b0", python = ">=3.6.2"},
    {version = "20.8b1", python = "<3.6.2"}
]
flake8 = "^4.0"
mypy = "0.931"
check-manifest = ">=0.47,<1"
bump2version = ">=1.0,<2"
tox = "^3.24"

[tool.black]
target-version = ['py36', 'py37', 'py38', 'py39', 'py310']

[build-system]
requires = ["poetry_core>=1,<2", "setuptools>=59,<70"]
build-backend = "poetry.core.masonry.api"
